packages/front-end/styles/global.scss
/* ... */
.modal {
  label {
    color: $gray1;
    font-weight: 500;
  }
}

.app-sidebar-header {
  .selected {
    background-color: $purple;
  }
  .divider {
    margin-top: 9px;
    border-top: 1px solid rgba(0, 0, 0, 0.5);
    a {
      border-top: 1px solid rgba(255, 255, 255, 0.1);
    }
  }
}

.commalist {
  span:not(:last-child) {
    &:after {
      content: ", ";
    }
  }
}

.appbox {
  background-color: #fff;
  border: 1px solid $app-border;
  margin-bottom: 1em;
  border-radius: 5px;

  td {
    vertical-align: middle;
  }

  &.tabbed {
    border-top: none;
    border-radius: 0 0 5px 5px;
  }

  .activesort {
    opacity: 1;
  }
  .inactivesort {
    opacity: 0.2;
    &:hover {
      opacity: 1;
    }
  }
}
.flex-1 {
  flex: 1;
}
.diff-wrapper td {
  padding: 0 10px !important;
}
.expandable-container {
  overflow: hidden;
  max-height: 120px;
  cursor: pointer;
  transition: max-height 0.3s;
  position: relative;
}
.badge-used {
  opacity: 0.5;
}

.code-holder {
  margin: 0.5em 0;

  &.collapsible .code {
    transition: max-height 0.2s;
    max-height: 45em;
    overflow-y: scroll;
  }

  &.collapsed .code {
    max-height: 10em;
  }

  .action-buttons {
    z-index: 999;
    position: absolute;
    top: 8px;
    right: 8px;

    .message {
      padding: 2px 6px;
      background: $highlight-purple;
      color: #fff;
      position: relative;
      margin-right: 10px;
      display: inline-block;
      border-radius: 3px;
      margin-top: 2px;

      .arrow {
        position: absolute;
        left: 100%;
        top: 50%;
        margin-top: -6px;
        border: 6px solid transparent;
        border-left: 6px solid $highlight-purple;
      }
    }
  }

  pre {
    margin: 0 !important;
  }
}

.tiptrigger {
  display: inline-block;
  position: relative;
  .tooltip {
    display: none;
    font-family: inherit;
    opacity: 0;

    &.bs-tooltip-bottom {
      top: 100%;
      left: 50%;
      transform: translate(-50%, 0);

      .arrow::before {
        border-bottom-color: $blue;
      }
    }
    &.bs-tooltip-left {
      .arrow {
        display: none;
      }
      .arrow::before {
        border-left-color: $blue;
      }
    }
    .arrow {
      left: 50%;
      margin-left: -0.4rem;
    }
    .tooltip-inner {
      color: #fff;
      max-width: 400px;
      padding: 0.7em 1em;
      background-color: $blue;
      box-shadow: 1px 1px 4px rgb(0 0 0 / 40%);
    }

    &.bs-tooltip-top {
      bottom: 1rem;
      left: 50%;
      transform: translate(-50%, 0);

      .arrow::before {
        border-top-color: $blue;
      }
    }
  }
  &:hover .tooltip {
    display: block;
    opacity: 1;
  }
}
.nav-link {
  padding: 0.3rem 0.8rem;
}
.nav-underlined .nav-link.active,
.nav-underlined .show > .nav-link {
  border-bottom: 2px solid #029dd1;
  font-weight: bold;
}
.welcome {
  z-index: 1000;
  position: relative;
  min-height: 100vh;
  font-size: 1rem;
  font-family: Poppins, "Helvetica Neue", Arial, sans-serif;

  .h1 {
    font-size: 1.9rem;
  }
  .h2 {
    font-size: 1.6rem;
  }

  .intro-side {
    background-color: $purple;
    background: radial-gradient(
      at 50% 100%,
      rgba(109, 18, 228, 0.75),
      rgb(15, 1, 94)
    );
    color: #fff;
    padding-bottom: 30px;
    vertical-align: middle;
    min-height: 100%;
  }
  .ghosted-logo {
    background: transparent url("/logo/growth-book-logomark-ghosted.png") 50%
      50%;
    background-size: contain;
    background-repeat: no-repeat;
    min-height: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 10px;
    right: 10px;
    opacity: 0.5;
  }
  .logo {
    position: absolute;
    bottom: 10px;
    left: 0;
    right: 0;
    text-align: center;
  }
  .form-side {
    background-color: #fff;
    .formwrap {
      width: 100%;
      max-width: 500px;
    }
  }
  h1,
  h2,
  h3 {
    font-weight: 600;
  }
  .logout-link {
    position: absolute;
    top: 20px;
    right: 20px;
  }
  .tiptrigger {
    top: -1px;
  }
}
@media (min-width: 575px) {
  .welcome {
    .full-height {
      min-height: 100vh;
    }
    .intro-side {
      padding-bottom: 0;
    }
  }
}

.experiment-compact-holder {
  width: 100%;
  overflow-x: auto;
}

.experiment-tooltip {
  position: absolute;
  left: 50%;
  width: 300px;
  margin-left: -150px;
  text-align: center;
  bottom: 0;
  border-radius: 6px;
  font-size: 0.8em;
  background: rgba(255, 255, 255, 0.7);
  .tooltip-results {
    .ci-neg {
      color: $dark-red;
    }
    .ci-pos {
      color: $dark-green;
    }
    > div {
      padding: 0 8px;
    }
  }
  .tooltip-arrow {
    position: absolute;
    width: 16px;
    height: 16px;
    transform: rotate(45deg);
    right: -8px;
    top: 70%;
    background-color: #fff;
    box-shadow: rgba(6, 6, 6, 0.365) 0px 0px 1px;
    clip-path: polygon(0% 0%, 104% -4%, 100% 100%);
    border: 1px inset rgba(0, 0, 0, 0.1);
  }
}

.toggle-switch {
  display: inline-block;
  margin-right: 5px;
  vertical-align: middle;
  height: 25px;
  width: 50px;
  position: relative;

  input[type="checkbox"] {
    height: 0;
    width: 0;
    visibility: hidden;
  }

  label {
    position: absolute;
    top: 0;
    left: 0;
    cursor: pointer;
    text-indent: -9999px;
    width: 50px;
    height: 25px;
    background: $gray-300;
    display: block;
    border-radius: 100px;
    margin-bottom: 0;
    padding-bottom: 0;
  }

  label:after {
    content: "";
    position: absolute;
    top: 2px;
    left: 2px;
    width: 21px;
    height: 21px;
    background: #fff;
    border-radius: 90px;
    transition: 0.3s;
  }

  input:checked + label:after {
    left: calc(100% - 2px);
    transform: translateX(-100%);
  }

  input:checked + label {
    background: $purple;
  }
  &.toggle-featureValue input:checked + label {
    background: $blue;
  }

  label:active:after {
    width: 30px;
  }

  &.disabled {
    label {
      cursor: not-allowed;
    }
    label:active:after {
      width: 21px;
    }
  }
}
/* ... */

